[package]
name = "zero2prod"
authors = ["Alynie Walter <alynie.walter@gmail.com>"]
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
dotenv = "0.15.0"
actix-web = "4.11.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.12.18"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
